src/styles/base.css
:root {
    display: flex;
    flex-direction: column;
    height: auto;
    
    --green: #379235;
    --beige: #d0b793;
    --blue: #144e93;
    --cyan: #51aacc;
    --dark: #252525;
    --light: #a9abbf;
    --lighter: #ebecef;
    --red: #650505;
    --white: #fff;

    --smartblue: var(--cyan);
    --smartbody: var(--white);
    --button-color: var(--cyan);

    font-size: 10px;
    
    --fs-small: 1.0rem;
    --fs-normal: 1.2rem;
    --fs-big: 1.8rem;
    --fs-bigger: 3.0rem;
    --fs-biggest: 4.2rem;

    --lh-normal: calc(1.5 * var(--fs-normal));
    --lh-big: calc(1.5 * var(--fs-big));
    --lh-bigger: calc(1.5 * var(--fs-bigger));
    --lh-biggest: calc(1.5 * var(--fs-biggest));

    --spacing-xs: 0.2rem;
    --spacing-sm: 0.5rem;
    --spacing-md: 1.0rem;
    --spacing-lg: 2.0rem;
    --spacing-xl: 5.0rem;

    --maxwidth: 1024px;

    --radius: 4px;
}

body {
    background-color: var(--dark);
    color: var(--smartbody);
    display: flex;;
    flex-grow: 1;
    height: 100%;
}

article {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    padding: var(--spacing-md);
    width: 100%;
}

input,
select {
    background-color: var(--white);
    border-radius: var(--radius);
    color: var(--dark);
    padding: var(--spacing-md);
}

li {
    display: inline-block;
}

.grid-list {
    display: grid;
    grid-gap: var(--spacing-md);
    grid-template-columns: 1fr;
}

@media screen and (min-width: 768px) {
    .grid-list {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (min-width: 1024px) {
    .grid-list {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

.spacing-bottom {
    margin-bottom: var(--spacing-md);
}

.spacing-top {
    margin-top: var(--spacing-md);
}

.form-control {
    max-width: 100%;
    width: 400px;
}

